# Watermelon-VectorConverter

./: .gitignore  Cargo.toml  LICENSE.md  README.md  THIRD_PARTY_NOTICES.md
.github/workflows/: android.yml  desktop.yml  verify.yml  wrapperboot.yml
android/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/androidTest/java/com/watermelon/converter/jni/: NativeRoundTripTest.kt
android/app/src/androidTest/java/com/watermelon/converter/ui/: HomeNavigationTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/watermelon/converter/: MainActivity.kt  WvgcApp.kt
android/app/src/main/java/com/watermelon/converter/data/files/: FileNode.kt  FileTreeRepository.kt  MarkedFilesStore.kt  RealFileRepository.kt
android/app/src/main/java/com/watermelon/converter/data/model/: BatchReport.kt  ConversionRecord.kt  HistoryStore.kt  VectorProperties.kt
android/app/src/main/java/com/watermelon/converter/data/prefs/: SettingsRepository.kt
android/app/src/main/java/com/watermelon/converter/data/repository/: FileRepository.kt
android/app/src/main/java/com/watermelon/converter/jni/: AvdFramesResult.kt  ErrorMessages.kt  SvgConverter.kt  SvgConverterNative.kt
android/app/src/main/java/com/watermelon/converter/logging/: AppLogger.kt
android/app/src/main/java/com/watermelon/converter/ui/: MainPager.kt  SharedViewModel.kt
android/app/src/main/java/com/watermelon/converter/ui/components/: FileIcon.kt  ReportPanel.kt  SeedBar.kt  VectorPropertiesPanel.kt  WatermelonLoader.kt  WatermelonSlice.kt
android/app/src/main/java/com/watermelon/converter/ui/screens/: AboutScreen.kt  BatchScreen.kt  ExportScreen.kt  FilesScreen.kt  HistoryScreen.kt  HomeScreen.kt  ImportScreen.kt  PreviewScreen.kt  ReportScreen.kt  SettingsScreen.kt
android/app/src/main/java/com/watermelon/converter/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/java/com/watermelon/converter/ui/viewer/: SvgViewerActivity.kt
android/app/src/main/java/com/watermelon/converter/util/: DrawableRenderer.kt  OutputDestination.kt  ShareUtils.kt  StoragePermission.kt  StorageVolumes.kt  WvgcPaths.kt
android/app/src/main/java/com/watermelon/converter/viewmodel/: BatchViewModel.kt  ConversionViewModel.kt  FileManagerViewModel.kt  ReverseBatchViewModel.kt  ReverseConversionViewModel.kt  SettingsViewModel.kt
android/app/src/main/res/drawable/: ic_folder.xml  ic_launcher_foreground.xml  watermelon_gen.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/test/java/com/watermelon/converter/jni/: FakeSvgConverter.kt
android/app/src/test/java/com/watermelon/converter/viewmodel/: ConversionViewModelTest.kt  HistoryStoreTest.kt
android/gradle/: .gitkeep
ci/: verify_interfaces.py  verify_jni_parity.py
ci/harness/: README.md
ci/package/: README.md
docs/contracts/: README.md
docs/decision-records/: README.md
docs/developer-handbook/: README.md
svg-converter-core/: Cargo.toml
svg-converter-core/src/: analysis.rs  animation.rs  animation_engine.rs  arc.rs  batch_processor.rs  error.rs  gradients.rs  image_export.rs  jni.rs  lib.rs  models.rs  shapes.rs  svg_emit.rs  svg_parser.rs  utils.rs  vd_models.rs  vd_parser.rs  vector_drawable.rs
svg-converter-core/tests/: analysis_tests.rs  analyze_vd_tests.rs  avd_animation.rs  batch.rs  clip_path.rs  conversion.rs  gradients.rs  named_colors.rs  reverse_batch.rs  reverse_conversion.rs  shapes_arcs.rs  style_inheritance.rs
tauri/: README.md  package.json  svelte.config.js  vite.config.js
tauri/src/: app.css  app.html
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/icons/: icon.icns
tauri/src-tauri/installer/: hooks.nsi
tauri/src-tauri/src/: commands.rs  lib.rs  main.rs
tauri/src-tauri/tests/: commands.rs
tauri/src/components/: AssocNoticeModal.svelte  FileDropZone.svelte  FileDropZone.ts  Nav.svelte  PreviewPane.svelte  PreviewPane.ts  ProgressBar.svelte  ProgressBar.ts  WatermelonButton.svelte  WatermelonButton.ts
tauri/src/lib/: settings.ts  tauri.ts
tauri/src/routes/: +layout.svelte  +layout.ts  +page.svelte  Batch.ts  Export.ts  Home.ts  Import.ts  Preview.ts
tauri/src/routes/about/: +page.svelte
tauri/src/routes/batch/: +page.svelte
tauri/src/routes/settings/: +page.svelte
viewer/: README.md  package.json  svelte.config.js  vite.config.js
viewer/src/: app.css  app.html
viewer/src-tauri/: Cargo.toml  tauri.conf.json
viewer/src-tauri/icons/: icon.icns
viewer/src-tauri/src/: commands.rs  lib.rs  main.rs
viewer/src/routes/: +page.svelte
