# Copyright (c) 2026 Suhail Muzaffari. All rights reserved.
[package]
name = "svg-converter-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
resvg = { version = "0.47", default-features = false }
usvg = { version = "0.47", default-features = false }
roxmltree = "0.20"
quick-xml = "0.37"
zip = "2.2"
base64 = "0.22"
rayon = "1.10"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
