# Copyright (c) 2026 Suhail Muzaffari. All rights reserved.
[package]
name = "svg-converter-core"
version = "0.1.0"
edition = "2021"
authors = ["Suhail Muzaffari <so.muzaff@gmail.com>"]
license = "LicenseRef-Proprietary"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
# Module R (implemented):
roxmltree = "0.20"
# Module P (implemented):
resvg = { version = "0.44", default-features = false }
usvg = { version = "0.44", default-features = false }
tiny-skia = "0.11"
zip = { version = "2", default-features = false, features = ["deflate"] }
rayon = "1.10"

# Module B (FFI) — enabled when implemented:
# [target.'cfg(target_os = "android")'.dependencies]
# jni = "0.21"

# NOTE: On a modern toolchain (rustc >= 1.80) these resolve to latest.
# In a constrained 1.75 environment, pin: hashbrown=0.14.5, rayon=1.10, zip<=2.1.3.

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
