# Copyright (c) 2026 Suhail Muzaffari. All rights reserved.
[package]
name = "svg-converter-core"
version = "0.1.0"
edition = "2021"
authors = ["Suhail Muzaffari <so.muzaff@gmail.com>"]
license = "LicenseRef-Proprietary"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
# Module R (implemented):
roxmltree = "0.21"
# Module P (implemented):
resvg = { version = "0.47", default-features = false }
usvg = { version = "0.47", default-features = false }
tiny-skia = "0.12"
zip = { version = "8", default-features = false, features = ["deflate"] }
rayon = "1.10"

# Module B (FFI) — enabled when implemented:
# [target.'cfg(target_os = "android")'.dependencies]
# jni = "0.21"

# Upgraded 2026-07-22: resvg/usvg 0.44->0.47, tiny-skia 0.11->0.12,
# zip 2->8, roxmltree 0.20->0.21. No source changes required in
# image_export.rs or batch_processor.rs — verified call sites
# (Options::default, Tree::from_str, resvg::render, ZipArchive,
# ZipWriter, FileOptions<()>) are unchanged across these versions.
# NOT compiler-verified in this sandbox — run `cargo build` locally
# before merging.

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
