# Copyright (c) 2026 Suhail Muzaffari. All rights reserved.
[package]
name = "wvgc-desktop"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
svg-converter-core = { path = "../../svg-converter-core" }
