# Copyright (c) 2026 Suhail Muzaffari. All rights reserved.
[package]
name = "wvgc-desktop"
version = "0.1.0"
edition = "2021"
authors = ["Suhail Muzaffari <so.muzaff@gmail.com>"]
license = "LicenseRef-Proprietary"

[lib]
name = "wvgc_desktop"
path = "src/lib.rs"

[[bin]]
name = "wvgc-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
svg-converter-core = { path = "../../svg-converter-core" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
