# Copyright (c) 2026 Suhail Muzaffari. All rights reserved.
[package]
name = "wvgc-viewer"
version = "0.1.0"
edition = "2021"
authors = ["Suhail Muzaffari <so.muzaff@gmail.com>"]
license = "LicenseRef-Proprietary"

[lib]
name = "wvgc_viewer"
path = "src/lib.rs"

[[bin]]
name = "wvgc-viewer"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-single-instance = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
svg-converter-core = { path = "../../svg-converter-core" }
